--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build:prod": "vue-cli-service build --mode production",
+    "lint": "vue-cli-service lint",
+    "firebase:deploy": "firebase deploy",
+    "deploy": "npm run build:prod && npm run firebase:deploy"
   },
   "dependencies": {
     "core-js": "^3.6.4",
