--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
     "build:prod": "vue-cli-service build --mode production",
     "lint": "vue-cli-service lint",
     "firebase:deploy": "firebase deploy",
